# whatsgpt-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: chatgpt.rs  main.rs  routes.rs  webhook.rs  whatsapp.rs
