[package]
name = "cc-whats-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-openai = "0.10.3"
axum = "0.6.17"
dotenvy = "0.15.7"
ngrok = { version = "0.11.3", features = ["axum"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
whatsapp-cloud-api = "0.3.0"
